--- a/package.json
+++ b/package.json
@@ -42,16 +42,10 @@
     "build:lib": "rm -rf lib && ts-node --project build/tsconfig.lib.json build/rollup.lib.ts && npm run tsc:lib",
     "build:online": "rm -rf dist && ts-node --project build/tsconfig.lib.json build/rollup.online.ts"
   },
-  "keywords": [
-    "plvue",
-    "reactivity",
-    "jsx"
-  ],
   "author": "yubo9807",
-  "homepage": "http://plvue.hpyyb.cn",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yubo9807/pl-vue.git"
+    "url": "git+https://github.com/yubo9807/pl-react.git"
   },
   "files": [
     "lib"
